Fix: article header overflow

--- a/assets/css/site.scss
+++ b/assets/css/site.scss
@@ -410,7 +410,7 @@ figcaption {
 		.ml{top: 50%; left: 2%}
 		.bl{top: 80%; left: 8%}
 		.tl{top: 5%; left: 5%}
-		.mr{top: 50%; right: 0%}
+		.mr{top: 50%; right: -2%}
 		.br{top: 70%; right: 2%}
 		.tr{top: 1%; right: 4%}
 	}
